// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ButtonLink renders a ButtonLink 1`] = `
<div>
  <a
    class="css-1avxxxc"
    font-family="default"
    font-size="small,medium"
    href="/test"
  >
    Link text
  </a>
</div>
`;

exports[`components/ButtonLink renders a ButtonLink with props 1`] = `
<div>
  <a
    class="css-ud99ti"
    font-family="default"
    font-size="medium"
    href="/test"
  >
    Link text
  </a>
</div>
`;
